SpecularLang/SpecLangParser.py
# Generated from C:/Users/Emery/PycharmProjects/SpecularLang/SpecularLang\SpecLangParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SpecLangParser ( Parser ):

    grammarFileName = "SpecLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Start'", "'Set'", "'If'", "'While'", "'Do'", "<INVALID>", 
                     "<INVALID>", "'says'", "'globally'", "'do'", "'Otherwise'", 
                     "'and'", "'or'", "'not'", "'*'", "'/'", "'+'", "'-'", 
                     "'equal to'", "'greater than'", "'less than'", "'is'", 
                     "'true'", "'false'", "'none'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "NEWLINE", "STRING", 
                      "SEPARATOR", "OPEN", "CLOSE", "START", "SET", "IF", 
                      "WHILE", "DO_Upper", "ACTOR_NAME", "WS", "SAYS", "GLOBALLY", 
                      "DO_Lower", "OTHERWISE", "AND", "OR", "NOT", "MUL", 
                      "DIV", "ADD", "SUB", "EQUAL_TO", "GREATER_THAN", "LESS_THAN", 
                      "IS", "TRUE", "FALSE", "NONE", "ID", "NUMBER", "C_WS", 
                      "PL_START", "CA_CLEAN_WORD", "COLON", "CA_WS", "PL_END", 
                      "PL_NEWLINE", "PL_WS", "EMOTION_START", "DS_WS", "EMOTION", 
                      "EMOTION_END", "ANYCHAR" ]

    RULE_program = 0
    RULE_scene_statement = 1
    RULE_block = 2
    RULE_simple_statement = 3
    RULE_complex_statement = 4
    RULE_dialog = 5
    RULE_dialog_block = 6
    RULE_emotion = 7
    RULE_custom_statement = 8
    RULE_custom_param_name_list = 9
    RULE_custom_params_list = 10
    RULE_assignment = 11
    RULE_ifstatement = 12
    RULE_whileLoop = 13
    RULE_else_statement = 14
    RULE_expression = 15
    RULE_param_list = 16
    RULE_or_equal_to_modifier = 17

    ruleNames =  [ "program", "scene_statement", "block", "simple_statement", 
                   "complex_statement", "dialog", "dialog_block", "emotion", 
                   "custom_statement", "custom_param_name_list", "custom_params_list", 
                   "assignment", "ifstatement", "whileLoop", "else_statement", 
                   "expression", "param_list", "or_equal_to_modifier" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    NEWLINE=3
    STRING=4
    SEPARATOR=5
    OPEN=6
    CLOSE=7
    START=8
    SET=9
    IF=10
    WHILE=11
    DO_Upper=12
    ACTOR_NAME=13
    WS=14
    SAYS=15
    GLOBALLY=16
    DO_Lower=17
    OTHERWISE=18
    AND=19
    OR=20
    NOT=21
    MUL=22
    DIV=23
    ADD=24
    SUB=25
    EQUAL_TO=26
    GREATER_THAN=27
    LESS_THAN=28
    IS=29
    TRUE=30
    FALSE=31
    NONE=32
    ID=33
    NUMBER=34
    C_WS=35
    PL_START=36
    CA_CLEAN_WORD=37
    COLON=38
    CA_WS=39
    PL_END=40
    PL_NEWLINE=41
    PL_WS=42
    EMOTION_START=43
    DS_WS=44
    EMOTION=45
    EMOTION_END=46
    ANYCHAR=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scene_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecLangParser.Scene_statementContext)
            else:
                return self.getTypedRuleContext(SpecLangParser.Scene_statementContext,i)


        def getRuleIndex(self):
            return SpecLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SpecLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.scene_statement()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SpecLangParser.START):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Scene_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(SpecLangParser.START, 0)

        def ID(self):
            return self.getToken(SpecLangParser.ID, 0)

        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(SpecLangParser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(SpecLangParser.DEDENT, 0)

        def getRuleIndex(self):
            return SpecLangParser.RULE_scene_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScene_statement" ):
                listener.enterScene_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScene_statement" ):
                listener.exitScene_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScene_statement" ):
                return visitor.visitScene_statement(self)
            else:
                return visitor.visitChildren(self)




    def scene_statement(self):

        localctx = SpecLangParser.Scene_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scene_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(SpecLangParser.START)
            self.state = 42
            self.match(SpecLangParser.ID)
            self.state = 43
            self.match(SpecLangParser.INDENT)
            self.state = 44
            self.block()
            self.state = 45
            self.match(SpecLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(SpecLangParser.Simple_statementContext,0)


        def NEWLINE(self):
            return self.getToken(SpecLangParser.NEWLINE, 0)

        def complex_statement(self):
            return self.getTypedRuleContext(SpecLangParser.Complex_statementContext,0)


        def block(self):
            return self.getTypedRuleContext(SpecLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SpecLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecLangParser.SET]:
                self.state = 47
                self.simple_statement()
                self.state = 48
                self.match(SpecLangParser.NEWLINE)
                pass
            elif token in [SpecLangParser.IF, SpecLangParser.WHILE, SpecLangParser.DO_Upper, SpecLangParser.ACTOR_NAME]:
                self.state = 50
                self.complex_statement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SpecLangParser.SET) | (1 << SpecLangParser.IF) | (1 << SpecLangParser.WHILE) | (1 << SpecLangParser.DO_Upper) | (1 << SpecLangParser.ACTOR_NAME))) != 0):
                self.state = 53
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SpecLangParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_statement" ):
                return visitor.visitSimple_statement(self)
            else:
                return visitor.visitChildren(self)




    def simple_statement(self):

        localctx = SpecLangParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dialog(self):
            return self.getTypedRuleContext(SpecLangParser.DialogContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(SpecLangParser.IfstatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(SpecLangParser.WhileLoopContext,0)


        def custom_statement(self):
            return self.getTypedRuleContext(SpecLangParser.Custom_statementContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_complex_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex_statement" ):
                listener.enterComplex_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex_statement" ):
                listener.exitComplex_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplex_statement" ):
                return visitor.visitComplex_statement(self)
            else:
                return visitor.visitChildren(self)




    def complex_statement(self):

        localctx = SpecLangParser.Complex_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_complex_statement)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecLangParser.ACTOR_NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.dialog()
                pass
            elif token in [SpecLangParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.ifstatement()
                pass
            elif token in [SpecLangParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.whileLoop()
                pass
            elif token in [SpecLangParser.DO_Upper]:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.custom_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DialogContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTOR_NAME(self):
            return self.getToken(SpecLangParser.ACTOR_NAME, 0)

        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def dialog_block(self):
            return self.getTypedRuleContext(SpecLangParser.Dialog_blockContext,0)


        def NEWLINE(self):
            return self.getToken(SpecLangParser.NEWLINE, 0)

        def DEDENT(self):
            return self.getToken(SpecLangParser.DEDENT, 0)

        def emotion(self):
            return self.getTypedRuleContext(SpecLangParser.EmotionContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_dialog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDialog" ):
                listener.enterDialog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDialog" ):
                listener.exitDialog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDialog" ):
                return visitor.visitDialog(self)
            else:
                return visitor.visitChildren(self)




    def dialog(self):

        localctx = SpecLangParser.DialogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dialog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SpecLangParser.ACTOR_NAME)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SpecLangParser.EMOTION_START:
                self.state = 65
                self.emotion()


            self.state = 68
            self.match(SpecLangParser.INDENT)
            self.state = 69
            self.dialog_block()
            self.state = 70
            self.match(SpecLangParser.NEWLINE)
            self.state = 71
            self.match(SpecLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dialog_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANYCHAR(self):
            return self.getToken(SpecLangParser.ANYCHAR, 0)

        def STRING(self):
            return self.getToken(SpecLangParser.STRING, 0)

        def getRuleIndex(self):
            return SpecLangParser.RULE_dialog_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDialog_block" ):
                listener.enterDialog_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDialog_block" ):
                listener.exitDialog_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDialog_block" ):
                return visitor.visitDialog_block(self)
            else:
                return visitor.visitChildren(self)




    def dialog_block(self):

        localctx = SpecLangParser.Dialog_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dialog_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not(_la==SpecLangParser.STRING or _la==SpecLangParser.ANYCHAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmotionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EMOTION_START(self):
            return self.getToken(SpecLangParser.EMOTION_START, 0)

        def EMOTION(self):
            return self.getToken(SpecLangParser.EMOTION, 0)

        def EMOTION_END(self):
            return self.getToken(SpecLangParser.EMOTION_END, 0)

        def getRuleIndex(self):
            return SpecLangParser.RULE_emotion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmotion" ):
                listener.enterEmotion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmotion" ):
                listener.exitEmotion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmotion" ):
                return visitor.visitEmotion(self)
            else:
                return visitor.visitChildren(self)




    def emotion(self):

        localctx = SpecLangParser.EmotionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_emotion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(SpecLangParser.EMOTION_START)
            self.state = 76
            self.match(SpecLangParser.EMOTION)
            self.state = 77
            self.match(SpecLangParser.EMOTION_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO_Upper(self):
            return self.getToken(SpecLangParser.DO_Upper, 0)

        def CA_CLEAN_WORD(self):
            return self.getToken(SpecLangParser.CA_CLEAN_WORD, 0)

        def NEWLINE(self):
            return self.getToken(SpecLangParser.NEWLINE, 0)

        def custom_param_name_list(self):
            return self.getTypedRuleContext(SpecLangParser.Custom_param_name_listContext,0)


        def custom_params_list(self):
            return self.getTypedRuleContext(SpecLangParser.Custom_params_listContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_custom_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_statement" ):
                listener.enterCustom_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_statement" ):
                listener.exitCustom_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustom_statement" ):
                return visitor.visitCustom_statement(self)
            else:
                return visitor.visitChildren(self)




    def custom_statement(self):

        localctx = SpecLangParser.Custom_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_custom_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SpecLangParser.DO_Upper)
            self.state = 80
            self.match(SpecLangParser.CA_CLEAN_WORD)
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecLangParser.INDENT, SpecLangParser.DEDENT, SpecLangParser.SET, SpecLangParser.IF, SpecLangParser.WHILE, SpecLangParser.DO_Upper, SpecLangParser.ACTOR_NAME, SpecLangParser.COLON]:
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SpecLangParser.COLON:
                    self.state = 81
                    self.custom_param_name_list()


                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SpecLangParser.INDENT:
                    self.state = 84
                    self.custom_params_list()


                pass
            elif token in [SpecLangParser.NEWLINE]:
                self.state = 87
                self.match(SpecLangParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_param_name_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(SpecLangParser.COLON, 0)

        def CA_CLEAN_WORD(self, i:int=None):
            if i is None:
                return self.getTokens(SpecLangParser.CA_CLEAN_WORD)
            else:
                return self.getToken(SpecLangParser.CA_CLEAN_WORD, i)

        def SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(SpecLangParser.SEPARATOR)
            else:
                return self.getToken(SpecLangParser.SEPARATOR, i)

        def getRuleIndex(self):
            return SpecLangParser.RULE_custom_param_name_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_param_name_list" ):
                listener.enterCustom_param_name_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_param_name_list" ):
                listener.exitCustom_param_name_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustom_param_name_list" ):
                return visitor.visitCustom_param_name_list(self)
            else:
                return visitor.visitChildren(self)




    def custom_param_name_list(self):

        localctx = SpecLangParser.Custom_param_name_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_custom_param_name_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SpecLangParser.COLON)
            self.state = 91
            self.match(SpecLangParser.CA_CLEAN_WORD)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SpecLangParser.SEPARATOR:
                self.state = 92
                self.match(SpecLangParser.SEPARATOR)
                self.state = 93
                self.match(SpecLangParser.CA_CLEAN_WORD)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_params_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def NEWLINE(self):
            return self.getToken(SpecLangParser.NEWLINE, 0)

        def DEDENT(self):
            return self.getToken(SpecLangParser.DEDENT, 0)

        def STRING(self):
            return self.getToken(SpecLangParser.STRING, 0)

        def param_list(self):
            return self.getTypedRuleContext(SpecLangParser.Param_listContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_custom_params_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_params_list" ):
                listener.enterCustom_params_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_params_list" ):
                listener.exitCustom_params_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustom_params_list" ):
                return visitor.visitCustom_params_list(self)
            else:
                return visitor.visitChildren(self)




    def custom_params_list(self):

        localctx = SpecLangParser.Custom_params_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_custom_params_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SpecLangParser.INDENT)
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SpecLangParser.STRING]:
                self.state = 100
                self.match(SpecLangParser.STRING)
                pass
            elif token in [SpecLangParser.PL_START]:
                self.state = 101
                self.param_list()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 104
            self.match(SpecLangParser.NEWLINE)
            self.state = 105
            self.match(SpecLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(SpecLangParser.SET, 0)

        def ID(self):
            return self.getToken(SpecLangParser.ID, 0)

        def EQUAL_TO(self):
            return self.getToken(SpecLangParser.EQUAL_TO, 0)

        def expression(self):
            return self.getTypedRuleContext(SpecLangParser.ExpressionContext,0)


        def GLOBALLY(self):
            return self.getToken(SpecLangParser.GLOBALLY, 0)

        def getRuleIndex(self):
            return SpecLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SpecLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(SpecLangParser.SET)
            self.state = 108
            self.match(SpecLangParser.ID)
            self.state = 109
            self.match(SpecLangParser.EQUAL_TO)
            self.state = 110
            self.expression(0)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SpecLangParser.GLOBALLY:
                self.state = 111
                self.match(SpecLangParser.GLOBALLY)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SpecLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(SpecLangParser.ExpressionContext,0)


        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(SpecLangParser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(SpecLangParser.DEDENT, 0)

        def else_statement(self):
            return self.getTypedRuleContext(SpecLangParser.Else_statementContext,0)


        def getRuleIndex(self):
            return SpecLangParser.RULE_ifstatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstatement" ):
                listener.enterIfstatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstatement" ):
                listener.exitIfstatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstatement" ):
                return visitor.visitIfstatement(self)
            else:
                return visitor.visitChildren(self)




    def ifstatement(self):

        localctx = SpecLangParser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SpecLangParser.IF)
            self.state = 115
            self.expression(0)
            self.state = 116
            self.match(SpecLangParser.INDENT)
            self.state = 117
            self.block()
            self.state = 118
            self.match(SpecLangParser.DEDENT)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SpecLangParser.OTHERWISE:
                self.state = 119
                self.else_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileLoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SpecLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(SpecLangParser.ExpressionContext,0)


        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(SpecLangParser.BlockContext,0)


        def DEDENT(self):
            return self.getToken(SpecLangParser.DEDENT, 0)

        def getRuleIndex(self):
            return SpecLangParser.RULE_whileLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)




    def whileLoop(self):

        localctx = SpecLangParser.WhileLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whileLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SpecLangParser.WHILE)
            self.state = 123
            self.expression(0)
            self.state = 124
            self.match(SpecLangParser.INDENT)
            self.state = 125
            self.block()
            self.state = 126
            self.match(SpecLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OTHERWISE(self):
            return self.getToken(SpecLangParser.OTHERWISE, 0)

        def INDENT(self):
            return self.getToken(SpecLangParser.INDENT, 0)

        def block(self):
            return self.getTypedRuleContext(SpecLangParser.BlockContext,0)

